WIP: still....must cleanup all the non selected moves for the player

--- a/notebooks/prova.ipynb
+++ b/notebooks/prova.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "'d7d5'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "1"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "      <td>5</td>\n",
        "      <td>46</td>\n",
        "      <td>None</td>\n",
-       "      <td>79925</td>\n",
+       "      <td>80205</td>\n",
        "      <td>46</td>\n",
        "      <td>52</td>\n",
        "      <td>-1.28</td>\n",
@@ -311,7 +311,7 @@
        "      <td>5</td>\n",
        "      <td>48</td>\n",
        "      <td>None</td>\n",
-       "      <td>17491</td>\n",
+       "      <td>17545</td>\n",
        "      <td>48</td>\n",
        "      <td>11</td>\n",
        "      <td>-0.93</td>\n",
@@ -328,7 +328,7 @@
        "      <td>5</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>9856</td>\n",
+       "      <td>9888</td>\n",
        "      <td>47</td>\n",
        "      <td>6</td>\n",
        "      <td>-0.60</td>\n",
@@ -345,7 +345,7 @@
        "      <td>5</td>\n",
        "      <td>48</td>\n",
        "      <td>None</td>\n",
-       "      <td>9025</td>\n",
+       "      <td>9053</td>\n",
        "      <td>48</td>\n",
        "      <td>5</td>\n",
        "      <td>-0.88</td>\n",
@@ -362,7 +362,7 @@
        "      <td>5</td>\n",
        "      <td>50</td>\n",
        "      <td>None</td>\n",
-       "      <td>7928</td>\n",
+       "      <td>7955</td>\n",
        "      <td>50</td>\n",
        "      <td>5</td>\n",
        "      <td>-0.44</td>\n",
@@ -379,7 +379,7 @@
        "      <td>6</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>6746</td>\n",
+       "      <td>6770</td>\n",
        "      <td>47</td>\n",
        "      <td>4</td>\n",
        "      <td>-0.35</td>\n",
@@ -396,7 +396,7 @@
        "      <td>5</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>6581</td>\n",
+       "      <td>6612</td>\n",
        "      <td>47</td>\n",
        "      <td>4</td>\n",
        "      <td>-0.47</td>\n",
@@ -408,12 +408,12 @@
        "      <th>7</th>\n",
        "      <td>e7e6</td>\n",
        "      <td>e6</td>\n",
-       "      <td>2279</td>\n",
+       "      <td>2278</td>\n",
        "      <td>46</td>\n",
        "      <td>5</td>\n",
        "      <td>47</td>\n",
        "      <td>None</td>\n",
-       "      <td>5493</td>\n",
+       "      <td>5516</td>\n",
        "      <td>47</td>\n",
        "      <td>3</td>\n",
        "      <td>-0.61</td>\n",
@@ -430,7 +430,7 @@
        "      <td>4</td>\n",
        "      <td>46</td>\n",
        "      <td>None</td>\n",
-       "      <td>2188</td>\n",
+       "      <td>2192</td>\n",
        "      <td>46</td>\n",
        "      <td>1</td>\n",
        "      <td>0.25</td>\n",
@@ -442,12 +442,12 @@
        "      <th>9</th>\n",
        "      <td>b8c6</td>\n",
        "      <td>Nc6</td>\n",
-       "      <td>2283</td>\n",
+       "      <td>2282</td>\n",
        "      <td>45</td>\n",
        "      <td>5</td>\n",
        "      <td>49</td>\n",
        "      <td>None</td>\n",
-       "      <td>2094</td>\n",
+       "      <td>2103</td>\n",
        "      <td>49</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.81</td>\n",
@@ -464,7 +464,7 @@
        "      <td>4</td>\n",
        "      <td>42</td>\n",
        "      <td>None</td>\n",
-       "      <td>1331</td>\n",
+       "      <td>1334</td>\n",
        "      <td>42</td>\n",
        "      <td>0</td>\n",
        "      <td>-0.09</td>\n",
@@ -481,7 +481,7 @@
        "      <td>8</td>\n",
        "      <td>38</td>\n",
        "      <td>None</td>\n",
-       "      <td>760</td>\n",
+       "      <td>761</td>\n",
        "      <td>38</td>\n",
        "      <td>0</td>\n",
        "      <td>0.35</td>\n",
@@ -495,18 +495,18 @@
       ],
       "text/plain": [
        "     uci  san  averageRating  white  draws  black  game  tot_games  \\\n",
-       "0   d7d5   d5           2305     47      5     46  None      79925   \n",
-       "1   e7e5   e5           2302     45      5     48  None      17491   \n",
-       "2   d7d6   d6           2292     46      5     47  None       9856   \n",
-       "3   c7c5   c5           2290     46      5     48  None       9025   \n",
-       "4   h7h5   h5           2306     44      5     50  None       7928   \n",
-       "5   g7g6   g6           2290     46      6     47  None       6746   \n",
-       "6   c7c6   c6           2289     46      5     47  None       6581   \n",
-       "7   e7e6   e6           2279     46      5     47  None       5493   \n",
-       "8   g8f6  Nf6           2293     48      4     46  None       2188   \n",
-       "9   b8c6  Nc6           2283     45      5     49  None       2094   \n",
-       "10  b7b6   b6           2267     53      4     42  None       1331   \n",
-       "11  g7g5   g5           2311     52      8     38  None        760   \n",
+       "0   d7d5   d5           2305     47      5     46  None      80205   \n",
+       "1   e7e5   e5           2302     45      5     48  None      17545   \n",
+       "2   d7d6   d6           2292     46      5     47  None       9888   \n",
+       "3   c7c5   c5           2290     46      5     48  None       9053   \n",
+       "4   h7h5   h5           2306     44      5     50  None       7955   \n",
+       "5   g7g6   g6           2290     46      6     47  None       6770   \n",
+       "6   c7c6   c6           2289     46      5     47  None       6612   \n",
+       "7   e7e6   e6           2278     46      5     47  None       5516   \n",
+       "8   g8f6  Nf6           2293     48      4     46  None       2192   \n",
+       "9   b8c6  Nc6           2282     45      5     49  None       2103   \n",
+       "10  b7b6   b6           2267     53      4     42  None       1334   \n",
+       "11  g7g5   g5           2311     52      8     38  None        761   \n",
        "\n",
        "    strongest_practical  perc  eval  freq_pos  eval_pos  dbscore_pos  \n",
        "0                    46    52 -1.28         0         0            8  \n",
@@ -523,7 +523,7 @@
        "11                   38     0  0.35        11        11           11  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -588,12 +588,12 @@
        "      <th>0</th>\n",
        "      <td>b8c6</td>\n",
        "      <td>Nc6</td>\n",
-       "      <td>2283</td>\n",
+       "      <td>2282</td>\n",
        "      <td>45</td>\n",
        "      <td>5</td>\n",
        "      <td>49</td>\n",
        "      <td>None</td>\n",
-       "      <td>2094</td>\n",
+       "      <td>2103</td>\n",
        "      <td>49</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.81</td>\n",
@@ -607,13 +607,13 @@
       ],
       "text/plain": [
        "    uci  san  averageRating  white  draws  black  game  tot_games  \\\n",
-       "0  b8c6  Nc6           2283     45      5     49  None       2094   \n",
+       "0  b8c6  Nc6           2282     45      5     49  None       2103   \n",
        "\n",
        "   strongest_practical  perc  eval  freq_pos  eval_pos  dbscore_pos  \n",
        "0                   49     1 -0.81         9         3            1  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -678,6 +678,162 @@
     "    time.sleep(0.1)\n",
     "    clear_output(wait=True)\n",
     "    print(f\"Caricamento: {i}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = chess.Board()\n",
+    "notation = board.variation_san([node.move.from_uci('g2g4')])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1. g4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{board.fullmove_number}.{notation}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Move' object has no attribute 'san'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m node\u001b[39m.\u001b[39;49mmove\u001b[39m.\u001b[39;49msan()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Move' object has no attribute 'san'"
+     ]
+    }
+   ],
+   "source": [
+    "node.move.san()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = chess.Board()\n",
+    "san_move = board.san(node.move)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'g4'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "san_move"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = node.board()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.fullmove_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Move.from_uci('g2g4')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.peek()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "turn = b.turn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "turn"
    ]
   },
   {
